Fixes issues with footer spacing on cart page (#55)

--- a/components/Footer/footer.module.scss
+++ b/components/Footer/footer.module.scss
@@ -4,6 +4,7 @@ $breakpoint: 1023px;
 
 footer.container {
   width: 100%;
+  margin-top: auto;
   background-color: vars.$muse-green;
 }
 
